--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -341,11 +341,11 @@ ol {
 
 .hero-section {
 	height: 900px;
-	padding-top: 260px;
+	padding-top: 150px;
 	display: block;
 	background-image: url("../img/hero-bg.png");
 	background-size: cover;
-	background-color: #f3f7f9;
+	background-color: #343a40;
 	background-position: right top;
 	background-repeat: no-repeat;
 	position: relative;
@@ -1837,3 +1837,110 @@ ol {
 .box > .icon > .info > .more a { font-family: "Robot",sans-serif !important; font-size: 12px; color: #222; line-height: 12px; text-transform: uppercase; text-decoration: none; }
 .box > .icon:hover > .info > .more > a { color: #fff; padding: 6px 8px; background-color: #63B76C; }
 .box .space { height: 30px; }
+/* :: 8.0 Hero Area CSS */
+
+.welcome-area {
+    position: relative;
+    z-index: 1;
+}
+
+.welcome-slides {
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+
+    .owl-prev,
+    .owl-next {
+        @include transition-duration(500ms);
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        background-color: $hover;
+        text-indent: -50000em;
+        position: absolute;
+        top: 50%;
+        left: 30px;
+        margin-top: -40px;
+        z-index: 10;
+        background-position: center center !important;
+        background-size: cover !important;
+        opacity: 0;
+        visibility: hidden;
+
+        @media #{$breakpoint-xs} {
+            width: 40px;
+            left: 20px;
+            height: 40px;
+        }
+    }
+
+    .owl-next {
+        left: auto;
+        right: 30px;
+
+        @media #{$breakpoint-xs} {
+            right: 20px;
+        }
+    }
+
+    &:hover,
+    &:focus {
+
+        .owl-prev,
+        .owl-next {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+}
+
+.single-welcome-slide {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    height: 770px;
+    background-color: $primary;
+
+    @media #{$breakpoint-lg} {
+        height: 600px;
+    }
+
+    @media #{$breakpoint-md} {
+        height: 600px;
+    }
+
+    @media #{$breakpoint-xs} {
+        height: 700px;
+    }
+
+    .welcome-text {
+        position: relative;
+        z-index: 1;
+
+        h6 {
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            color: $white;
+            margin-bottom: 30px;
+        }
+
+        h2 {
+            font-size: 72px;
+            display: block;
+            margin-bottom: 30px;
+            color: $white;
+
+            @media #{$breakpoint-lg} {
+                font-size: 48px;
+            }
+
+            @media #{$breakpoint-md} {
+                font-size: 42px;
+            }
+
+            @media #{$breakpoint-xs } {
+                font-size: 30px;
+            }
+        }
+    }
+}
