--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -45,7 +45,7 @@ h2 {
 }
 
 h3 {
-	font-size: 30px;
+	/* font-size: 30px; */
 }
 
 h4 {
@@ -359,7 +359,7 @@ ol {
 }
 
 .hero-text {
-	padding-top: 60px;
+	/* padding-top: 60px; */
 }
 
 .hero-text h2 {
@@ -373,7 +373,7 @@ ol {
 
 .hero-text h4 {
 	color: #75849a;
-	font-size: 22px;
+	font-size: 26px;
 }
 
 .hero-subscribe-from {
@@ -962,9 +962,8 @@ ol {
 
 .page-info-section {
 	height: 300px;
-	background-image: url("../img/page-info-bg.png");
 	background-size: cover;
-	background-color: #f3f7f9;
+	background: url('../img/gradient-left-darker.png') repeat-y top left,url('../img/gradient-right-darker.png') repeat-y top right,#1c004c;
 	background-position: right top;
 	background-repeat: no-repeat;
 	position: relative;
@@ -1322,7 +1321,7 @@ ol {
 -----------------------*/
 
 .contact-form {
-	padding-right: 35px;
+	padding: 15px;
 }
 
 .contact-form h5 {
@@ -1642,14 +1641,15 @@ ol {
 
 @media only screen and (max-width: 767px) {
 	.header-section {
-		padding: 30px 0;
-		background: #17a2b8b3;
+		padding: 30px 0px;
+		background: #007bff24;
 	}
 	.header-section .responsive-bar {
 		float: right;
 		font-size: 25px;
 		display: block;
 		cursor: pointer;
+		color: white;
 	}
 	.header-section .user {
 		float: right;
