--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -748,8 +748,10 @@ ol {
 }
 
 .newsletter-text h2 {
+	/* top: 5px; */
 	font-size: 36px;
 	margin-bottom: 10px;
+	margin-top: 40px;
 }
 
 .newsletter-text p {
@@ -1514,6 +1516,7 @@ ol {
 	.about-img {
 		left: 0px;
 		width: 480px;
+		top: 40px;
 	}
 	.member {
 		width: calc(33.333333% - 25px);
