--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -137,13 +137,13 @@ ol {
 .site-btn {
 	position: relative;
 	display: inline-block;
-	padding: 15px 30px;
+	padding: 15px 10px;
 	font-size: 16px;
 	font-weight: 500;
-	line-height: 16px;
+	line-height: 9px;
 	border-radius: 50px;
 	font-family: "Futura", sans-serif;
-	min-width: 170px;
+	/* min-width: 100px; */
 	text-align: center;
 	border: 2px solid #7ad4cc;
 	cursor: pointer;
@@ -165,7 +165,7 @@ ol {
 }
 
 .site-btn.sb-gradients {
-	padding: 17px 32px;
+	/* padding: 13px 10px; */
 	border: none;
 	color: #fff;
 }
@@ -306,7 +306,7 @@ ol {
 
 .header-section .site-btn {
 	float: right;
-	margin-left: 60px;
+	margin-left: 5px;
 }
 
 .header-section .responsive-bar,
@@ -329,9 +329,10 @@ ol {
 .menu-list li a {
 	display: inline-block;
 	font-family: "Futura", sans-serif;
-	font-size: 16px;
-	padding: 10px 5px;
-	margin-right: 30px;
+	font-size: 20px;
+	padding: 15px 3px;
+	line-height: 16px;
+	margin-right: 13px;
 	color: #fff;
 }
 
@@ -761,7 +762,7 @@ ol {
 .newsletter-form {
 	position: relative;
 	margin-top: 20px;
-	padding-left: 40px;
+	/* padding-left: 40px; */
 }
 
 .newsletter-form input {
@@ -770,7 +771,7 @@ ol {
 	padding: 12px 30px;
 	border: none;
 	border-radius: 50px;
-	padding-right: 160px;
+	padding-right: 100px;
 	background: rgba(255, 255, 255, 0.2);
 	color: #fff;
 }
@@ -782,7 +783,6 @@ ol {
 	height: 100%;
 	border: none;
 	border-radius: 0px 50px 50px 0px;
-	min-width: 140px;
 	background: #fff;
 	color: #20509e;
 	font-size: 14px;
@@ -1469,7 +1469,7 @@ ol {
 
 @media (max-width: 1425px) {
 	.header-section .site-btn {
-		margin-left: 0;
+		margin-left: 5px;
 	}
 	.hero-section,
 	.page-info-section {
@@ -1799,7 +1799,8 @@ ol {
 		position: relative;
 		padding: 14px;
 		border-radius: 50px;
-		margin-top: 23px;
+		/* margin-top: 23px; */
+		margin-left: 6px;
 	}
 	.review-text-slider .owl-prev,
 	.review-text-slider .owl-next {
