--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,5 +1,5 @@
 .resbg {
-    background: repeat-y top right,#360f57;
+    background:url('../img/bg3.png') repeat-y top right,#360f57;
     height: 900px;
     padding-top: 150px;
     display: block;
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
     position: relative;
     overflow: hidden;
+    background-position: 1%;
 }
 
 .animation-bg .lf-player-container{
