--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -9,13 +9,32 @@
     overflow: hidden;
     background-position: 1%;
 }
-
+.hero-section-text{
+    margin-left:100px!important
+}
 .animation-bg .lf-player-container{
     position:relative;
     top: -54.8%;
     /* border:1px solid red; */
     left: 4px;
+
 }
+@media only screen and (max-device-width: 992px) {
+    .hero-section{
+        height:1150px!important;
+        background-size:cover;
+    }
+}
+@media only screen and (max-device-width: 525px) {
+    .hero-section-text{
+        margin-left:0!important
+    }
+    .hero-section{
+        height:1024px!important;
+        background-size:cover;
+    }
+}
+
 #lottie{
     width:64%!important;
     height:auto!important
